# tg-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deploy.sh
.claude/skills/deploy-vps/: SKILL.md
.claude/skills/rag-smoke/: SKILL.md
.github/scripts/: ai_review.py  test_ai_review.py
.github/workflows/: ai-review.yml
docs/: ai-review.md  architecture.md  configuration.md  demo-rag-tasks-4-5.md  demo.md  homework-readiness.md  troubleshooting.md
docs/user/: README.md  commands-and-memory.md  getting-started.md  support-and-faq.md  trip-planning.md
src/: AGENTS.md  admin.rs  bot.rs  config.rs  lib.rs  llm.rs  main.rs  mcp_client.rs  persist.rs  rag_client.rs  scheduler.rs  state.rs  support.rs
src/agent/: AGENTS.md  context_budget.rs  flow.rs  invariants.rs  memory.rs  mod.rs  notes.rs  profile.rs  prompt.rs  rag_task.rs  router.rs  session.rs  tests.rs  topic.rs
tests/: AGENTS.md  live_agent.rs  live_autoconnect.rs  live_connect.rs  live_orchestrator.rs  live_rag_dialog.rs  live_trip_flow.rs
