[package]
name = "tg-agent"
version = "0.3.0"
edition = "2021"
description = "Telegram AI agent with MCP support"

[[bin]]
name = "tg-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.12", features = ["macros"] }
rmcp = { version = "1.8", features = [
    "client",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "which-command",
] }
http = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
